--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,5 @@
             "email": "perin.massimo@gmail.com"
         }
     ],
-    "require": {
-        "garoevans/php-enum": "1.2.0"
-    }
+    "require": {}
 }
